--- a/pkg/virtctl/adm/logverbosity/BUILD.bazel
+++ b/pkg/virtctl/adm/logverbosity/BUILD.bazel
@@ -25,6 +25,7 @@ go_test(
         "logverbosity_test.go",
     ],
     deps = [
+        ":go_default_library",
         "//staging/src/kubevirt.io/api/core/v1:go_default_library",
         "//staging/src/kubevirt.io/client-go/kubecli:go_default_library",
         "//staging/src/kubevirt.io/client-go/testutils:go_default_library",
